k8s/service.yaml
 apiVersion: v1
kind: Service
metadata:
  name: cloud-task-manager-service
  namespace: cloud-devops
spec:
  type: NodePort
  selector:
    app: cloud-task-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
